--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,22 +1,22 @@
 <div class="body welcome">
   <div class="gray--background">
     <div class="home--main">
-      <%= render "welcome/partials/hero" %>
+      <%= render "welcome/partials/hero", cached: true %>
     </div>
   </div>
   <div class="wrapper_home">
   <h1 class="section--title"><a href="/categories/student-life">Student Life</a></h1>
   <div class="flex--welcome">
     <div class="flex-1">
-      <%= render_async get_category_1_welcome_path, retry_count: 3 do %>
+      <%= render_async_cache get_category_1_welcome_path, retry_count: 3 do %>
         <%= render "welcome/placeholders/category_row_placeholder" %>
       <% end %>
       <h1 class="section--title"><a href="/categories/opinion">Op-ed</a></h1>
-      <%= render_async get_category_2_welcome_path, retry_count: 3 do %>
+      <%= render_async_cache get_category_2_welcome_path, retry_count: 3 do %>
         <%= render "welcome/placeholders/category_row_placeholder" %>
       <% end %>
       <h1 class="section--title"><a href="/categories/culture">Culture</a></h1>
-      <%= render_async get_category_3_welcome_path, retry_count: 3 do %>
+      <%= render_async_cache get_category_3_welcome_path, retry_count: 3 do %>
         <%= render "welcome/placeholders/category_row_placeholder" %>
       <% end %>
     </div>
@@ -37,13 +37,13 @@
         </div>
       </div>
       <h1 class="section--title">Trending Articles</h1>
-      <%= render_async get_trending_posts_path, retry_count: 3 %>
+      <%= render_async_cache get_trending_posts_path, retry_count: 3 %>
     </div>
   </div>
   <h1 class="section--title"><a href="/categories/lifestyle">Lifestyle</a></h1>
   <div class="flex--welcome">
     <div class="flex-1">
-      <%= render_async get_category_4_welcome_path %>
+      <%= render_async_cache get_category_4_welcome_path %>
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
@@ -65,5 +65,5 @@
     </div>
   </div>
   <h1 class="section--title mb-0"><a href="/search">Recent Articles</a></h1>
-  <%= render_async get_recent_posts_path, retry_count: 3 %>
+  <%= render_async_cache get_recent_posts_path, retry_count: 3 %>
 </div>
