reverted guidelines to not use asynch fetch

--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -78,7 +78,7 @@
   </div>
 </div>
 <div role="button" data-step data-index="4" data-onboarding-content="Read the docs to know what our editor team is looking for in published articles.">
-  <%= render_async_cache get_writer_guidelines_path %>
+  <%= render "users/dashboard/guidelines" %>
 </div>
 
 <% if @show_onboarding %>
