--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -148,9 +148,7 @@
       </div>
     </div>
   </div>
-  <div>
-    <%= render_async_cache get_writer_guidelines_path %>
-  </div>
+  <%= render "users/dashboard/guidelines" %>
 </div>
 
 <script type="text/javascript">
