--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -176,8 +176,35 @@
       </div>
     </div>
   </div>
-  <div data-step data-index="4" data-onboarding-content="Reference the editor docs here to be clear on pitch and article requirements.">
-    <%= render_async_cache get_editor_guidelines_path %>
+  <div class="guidelines" data-step data-index="4" data-onboarding-content="Reference the editor docs here to be clear on pitch and article requirements.">
+    <div class="thelink">
+      <a href="/editor-requirements">
+      <div class="box foo G6 ">
+        <p>Start Here</p>
+      </div>
+      </a>
+    </div>
+    <div class="thelink">
+      <a href="/pitching-new-articles">
+        <div class="G7 box foo">
+          <p>Pitching New Articles</p>
+        </div>
+      </a>
+    </div>
+    <div class="thelink">
+      <a href="/pitch-requirements">
+        <div class="G8 box foo">
+          <p>Reviewing Pitches</p>
+        </div>
+      </a>
+    </div>
+    <div class="thelink">
+      <a href="/article-requirements">
+        <div class="G9 box foo">
+          <p>Reviewing Articles</p>
+        </div>
+      </a>
+    </div>
   </div>
 </div>
 
