--- a/app/views/newsletters/_preview.html.erb
+++ b/app/views/newsletters/_preview.html.erb
@@ -1,120 +1,107 @@
-<!DOCTYPE html>
-<html  xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<style type="text/css">
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
-    <!--[if !mso]--><!-- -->
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700' rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Helvetica:300,400,700' rel="stylesheet">
-    <!-- <![endif]-->
+    .white_wrapper *, .post_wrapper * {
+      background-color: white;
+    }
 
-    <title>The Teen Magazine Newsletter</title>
+    .footer * {
+      background-color: #333333;
+    }
 
-    <style type="text/css">
+    body {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        -webkit-font-smoothing: antialiased;
+        mso-margin-top-alt: 0px;
+        mso-margin-bottom-alt: 0px;
+        mso-padding-alt: 0px 0px 0px 0px;
+    }
 
-        .white_wrapper *, .post_wrapper * {
-          background-color: white;
-        }
+    p,
+    h1,
+    h2,
+    h3,
+    h4 {
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 
-        .footer * {
-          background-color: #333333;
-        }
+    span.preheader {
+        display: none;
+        font-size: 1px;
+    }
 
-        body {
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            -webkit-font-smoothing: antialiased;
-            mso-margin-top-alt: 0px;
-            mso-margin-bottom-alt: 0px;
-            mso-padding-alt: 0px 0px 0px 0px;
-        }
+    html {
+        width: 100%;
+    }
 
-        p,
-        h1,
-        h2,
-        h3,
-        h4 {
-            margin-top: 0;
-            margin-bottom: 0;
-            padding-top: 0;
-            padding-bottom: 0;
-        }
+    td {
+      background-color: <%= @newsletter.background_color || "#F1E4E7" %>;
+    }
+    /* ----------- responsivity ----------- */
 
-        span.preheader {
-            display: none;
-            font-size: 1px;
-        }
+    @media only screen and (max-width: 640px) {
+      .section td table {
+        width: 100% !important;
+      }
 
-        html {
-            width: 100%;
-        }
+      body, img {
+        max-width: 100% !important;
+      }
 
-        td {
-          background-color: <%= @newsletter.background_color || "#F1E4E7" %>;
-        }
-        /* ----------- responsivity ----------- */
+      .meta_description {
+        display: none;
+      }
 
-        @media only screen and (max-width: 640px) {
-          .section td table {
-            width: 100% !important;
-          }
+      .post_wrapper, .post_wrapper * {
+        padding-left: 0px !important;
+      }
 
-          body, img {
-            max-width: 100% !important;
-          }
+      .footer div {
+        font-size: 12px !important;
+      }
 
-          .meta_description {
-            display: none;
-          }
+      .footer div a {
+        color: white !important;
+        font-size: 12px !important;
+      }
 
-          .post_wrapper, .post_wrapper * {
-            padding-left: 0px !important;
-          }
+      .post_wrapper img {
+        width: 100% !important;
+        padding: 10px 0 !important;
+      }
 
-          .footer div {
-            font-size: 12px !important;
-          }
+      .read_more {
+        max-width: 140px !important;
+      }
+      .read_more a {
+        font-size: 0.7em !important;
+      }
+      /*------ top header ------ */
+      .main-header {
+        font-size: 24px !important;
+      }
+      .main-section-header {
+          font-size: 28px !important;
+      }
+      .show {
+          display: block !important;
+      }
+      .hide {
+          display: none !important;
+      }
+      .align-center {
+          text-align: center !important;
+      }
+      .no-bg {
+          background: none !important;
+      }
+    }
+</style>
 
-          .footer div a {
-            color: white !important;
-            font-size: 12px !important;
-          }
-
-          .post_wrapper img {
-            width: 100% !important;
-            padding: 10px 0 !important;
-          }
-
-          .read_more {
-            max-width: 140px !important;
-          }
-          .read_more a {
-            font-size: 0.7em !important;
-          }
-          /*------ top header ------ */
-          .main-header {
-            font-size: 24px !important;
-          }
-          .main-section-header {
-              font-size: 28px !important;
-          }
-          .show {
-              display: block !important;
-          }
-          .hide {
-              display: none !important;
-          }
-          .align-center {
-              text-align: center !important;
-          }
-          .no-bg {
-              background: none !important;
-          }
-        }
-    </style>
-</head>
 
 <body class="respond" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
     <!-- pre-header -->
@@ -122,7 +109,7 @@
         <tr>
             <td>
                 <div style="overflow:hidden;display:none;font-size:1px;color:#ffffff;line-height:1px;font-family:Arial;maxheight:0px;max-width:0px;opacity:0;">
-                    Plus, <%= @newsletter.posts.first.try(:title) %>
+                    Plus, <%= @posts.first.try(:title) %>
                 </div>
             </td>
         </tr>
@@ -178,7 +165,7 @@
               </tr>
     </table>
     <!-- end section -->
-    <% @newsletter.posts.each do |post| %>
+    <% @posts.each do |post| %>
       <!--  50% image -->
       <table border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="ffffff" class="section">
           <tr>
@@ -489,4 +476,3 @@ Unsubscribe to The Teen Magazine Newsletter <a href="https://theteenmagazine.us1
                         </table>
         <!-- end footer ====== -->
 </body>
-</html>
