--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,13 +26,16 @@
     <% end %>
   </div>
 </div>
-<div class="flex_horizontal center">
-  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Writers</h1>
-  <a href="/search?utf8=✓&filter=writers">
-    <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="mb-1 svg-inline--fa fa-search fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg>
-  </a>
-</div>
+<h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Writers</h1>
 <div id="posts_wrapper" class="skinny_wrapper">
+  <div class="flex_horizontal">
+    <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-left md-form form-sm active-theme-2 mt-2'}) do |f| %>
+      <%= f.text_field :query, class: "form-control form-control-sm mr-3", style: "flex: 1;", placeholder: "Search for a writer" %>
+    <% end %>
+  </div>
+  <% if @query.present? %>
+    <h2>Searching for writer... <span style="background-color: #FCD04D"><%= @query %></span></h2>
+  <% end %>
   <% @users.each do | user | %>
       <% if user != nil %>
         <div class="flex--profile">
@@ -53,6 +56,13 @@
             <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
             <% if current_user.admin? %>
               <h6 style="margin: 0;"><%= user.email %></h6>
+              <h6 class="mt-2" style="margin: 0; opacity: 50%;">
+                <% if user.last_sign_in_at.nil? %>
+                  Never signed in
+                <% else %>
+                  Last active <%= time_ago_in_words(user.last_sign_in_at) %> ago
+                <% end %>
+              </h6>
             <% end %>
           </div>
         </div>
