--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,10 @@
-<div class="skinny_wrapper">
+<div class="skinny_wrapper pb-4">
   <h1 id="page_title">Edit Category</h1>
   <%= render "/categories/form" %>
+  <div class="pb-4" style="margin-top: -70px;">
+    <%= form_for @category do |f| %>
+      <%= f.hidden_field :archive, value: !(@category.archive.eql? true) %>
+      <%= f.submit @archive_button, data: {confirm: @archive_msg}, :class => "link_theme delete_btn", :style => "font-size: 0.9em; margin-top: -15px;" %>
+    <% end %>
+  </div>
 </div>
