--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -35,6 +35,9 @@
             <% if @comment %>
               <%= render "posts/draft_feedback" %>
             <% end %>
+            <% if @show_badge_popup %>
+              <%= render "badges/new_badge_modal" %>
+            <% end %>
               <header id="main_navigation" class="clearfix header-navigation">
                 <div class="banner_stts_relative">
                   <p class= "banner_stts" style="background-color: #F0255E;">The Teen Magazine's January issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
