--- a/app/views/applies/confirmations/_writer_app_submitted.html.erb
+++ b/app/views/applies/confirmations/_writer_app_submitted.html.erb
@@ -1,5 +1,5 @@
 <div class="submitted" style="max-width: 800px; margin: auto;">
-  <div style="padding: 0px 30px;">
+  <div style="padding: 30px;">
     <h1>Your application was successfully submitted!</h1>
     <img style="display: block; width: 600px; max-width: 100%; margin: 0 auto;" src="https://media1.tenor.com/images/1f84b096cbe1cc9f3763c803bb17e10e/tenor.gif?itemid=5878976" />
     <p>We're so excited you want to join The Teen Magazine writer team!</p>
