--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -12,6 +12,7 @@
     </script>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'writer' %>
+    <%= javascript_include_tag 'ckeditor/ckeditor' %>
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
