--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,5 +1,5 @@
 <%= image_tag "banner_onboarding.jpg", id: "banner_writing" %>
-<div class="skinny_wrapper team">
+<div class="skinny_wrapper team pt-4">
   <h1>About Us</h1>
   <p>
     We believe that teen magazines should be inclusive and focus on topics written by, and important to, teens.
