--- a/app/views/application_mailer/weekly_newsletter.html.erb
+++ b/app/views/application_mailer/weekly_newsletter.html.erb
@@ -151,7 +151,7 @@
                         <td style="background-color: white;" align="center" style="color: #343434; font-size: 24px; font-family: Helvetica, Calibri, sans-serif; font-weight:700;letter-spacing: 3px; line-height: 35px;"
                             class="main-header">
                             <div style="line-height: 35px; color: #333333;">
-                                <%= Date.today.strftime("%B %d, %Y").upcase %>
+                                <%= Date.today.in_time_zone.strftime("%B %d, %Y").upcase %>
                             </div>
                         </td>
                     </tr>
