--- a/app/views/posts/_banner_status.html.erb
+++ b/app/views/posts/_banner_status.html.erb
@@ -9,4 +9,4 @@
   <% else %>
     <% @banner_color = "#00A9FF" %>
   <% end %>
-  <p class="banner_stts" style="background-color: <%= @banner_color %>">This article's status changed to <b><%= @message %></b> on <%= @most_recent_review.created_at.strftime("%A, %B %d") %></p>
+  <p class="banner_stts" style="background-color: <%= @banner_color %>">This article's status changed to <b><%= @message %></b> on <%= @most_recent_review.created_at.in_time_zone.strftime("%A, %B %d") %></p>
