--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -6,7 +6,7 @@
         <div class="card mb-3 <% if @unseen_applications.include? application %> unread <% end %>">
           <div class="card-body">
             <h5 class="card-title"><%= link_to ("#{application.first_name} #{application.last_name}"), application, :style => "color: #4ABEB6;" %> (<%= application.kind || "Writer" %> Application)</h5>
-            <p class="card-text"><small class="text-muted">Submitted <%= application.created_at.strftime("%D") %></small></p>
+            <p class="card-text"><small class="text-muted">Submitted <%= application.created_at.in_time_zone.strftime("%D") %></small></p>
             <p class="card-text"><%= application.description %></p>
           </div>
         </div>
