--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -52,7 +52,7 @@
                         <% if !draft.pitch.blank? %>
                           <p class="card-text"> <%= draft.pitch.description.truncate_words(20) %></p>
                         <% end %>
-                        <p class="card-text"> Submitted by <%= link_to draft.user.try(:full_name), draft.user, class: "link_nrml" %> on <%= draft.reviews.last.updated_at.strftime("%A, %b %d") %> </p>
+                        <p class="card-text"> Submitted by <%= link_to draft.user.try(:full_name), draft.user, class: "link_nrml" %> on <%= draft.reviews.last.updated_at.in_time_zone.strftime("%A, %b %d %H %M %S") %> </p>
                         <%= link_to "Claim Review", edit_post_path(draft), :class => "btn btn-primary btn-review", :id => "btn_dark" %>
                       </div>
                     </div>
@@ -65,7 +65,7 @@
                       <%= link_to "here", {:controller => "reviews", :action => "disable_notify_of_new_review", :user_id => @user.id}, :data => {:confirm => "You are turning off notifications."} %>.
                     <% elsif @editor_reviews_cnt < @reviews_requirement %>
                       Be notified via email when a new review becomes available
-                      <%= link_to "here", {:controller => "reviews", :action => "enable_notify_of_new_review", :user_id => @user.id}, :data => {:confirm => "Notifications will only be enabled for the month of #{Date.today.strftime("%B")} and will be turned off once you've finished this month's reviews."} %>.
+                      <%= link_to "here", {:controller => "reviews", :action => "enable_notify_of_new_review", :user_id => @user.id}, :data => {:confirm => "Notifications will only be enabled for the month of #{Date.today.in_time_zone.strftime("%B")} and will be turned off once you've finished this month's reviews."} %>.
                     <% else %>
                       Check back in a few days!
                     <% end %>
@@ -90,7 +90,7 @@
                     <div>
                       <h4 class="card-title"><%= link_to pitch.title, pitch, class: "link_nrml" %></h4>
                       <p class="card-text"> <%= pitch.description.truncate_words(20) %></p>
-                      <p class="card-text"> Submitted by <%= link_to pitch.user.try(:full_name), pitch.user, class: "link_nrml" %> on <%= pitch.updated_at.strftime("%A, %b %d") %> </p>
+                      <p class="card-text"> Submitted by <%= link_to pitch.user.try(:full_name), pitch.user, class: "link_nrml" %> on <%= pitch.updated_at.in_time_zone.strftime("%A, %b %d") %> </p>
                       <%= link_to "Review Pitch", edit_pitch_path(pitch), :class => "btn btn-primary btn-review", :id => "btn_dark" %>
                     </div>
                   </div>
@@ -128,7 +128,7 @@
               </div>
             <% elsif Date.today.end_of_month.day - Date.today.day < 16 && (@editor_pitches_cnt + @editor_reviews_cnt < (@reviews_requirement + @pitches_requirement) / 2) && (@user.created_at < (Time.now - 30.days)) %>
               <div class="alert alert-danger" role="alert">
-                <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-triangle" class="mb-1 svg-inline--fa fa-exclamation-triangle fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg> You are not on track to completing the editor assignments by <b><%= Date.today.end_of_month.strftime("%B %d") %></b>.
+                <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-triangle" class="mb-1 svg-inline--fa fa-exclamation-triangle fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg> You are not on track to completing the editor assignments by <b><%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %></b>.
                 Missing a deadline may result in your removal from the editor team.
               </div>
             <% end %>
@@ -156,19 +156,19 @@
             <div class="list-group-flush text-left mt-4 pt-2 mb-4" data-step data-index="5" data-onboarding-content="Keep track of your monthly assignments here. Two consecutively missed deadlines will result in your removal from the editor team. This excludes the month in which you were accepted as an editor. You will receive warning emails before this happens.">
               <div class="list-group-item" style="background-color: whitesmoke;">
                 <p class="m-0 pt-4 pb-3">
-                  <span class="rounded-circle mr-4 grey pt-4 pb-4 pl-3 pr-3"><svg width="30px" height="30px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="calendar-alt" class="white-text svg-inline--fa fa-calendar-alt fa-w-14" role="img" viewBox="0 0 448 512"><path fill="currentColor" d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"></path></svg></span>Your <%= Date.today.strftime("%B") %> Report:
+                  <span class="rounded-circle mr-4 grey pt-4 pb-4 pl-3 pr-3"><svg width="30px" height="30px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="calendar-alt" class="white-text svg-inline--fa fa-calendar-alt fa-w-14" role="img" viewBox="0 0 448 512"><path fill="currentColor" d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"></path></svg></span>Your <%= Date.today.in_time_zone.strftime("%B") %> Report:
                 </p>
               </div>
               <div class="list-group-item">
                 <p class="mb-0 pt-3 pb-3 <% if @editor_reviews_cnt >= @reviews_requirement %>strikethrough<% end %>">
                   <span class="rounded-circle mr-4 grey pt-4 pb-4 pl-3 pr-3"><svg width="30px" height="30px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="glasses" class="white-text svg-inline--fa fa-glasses fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M574.1 280.37L528.75 98.66c-5.91-23.7-21.59-44.05-43-55.81-21.44-11.73-46.97-14.11-70.19-6.33l-15.25 5.08c-8.39 2.79-12.92 11.86-10.12 20.24l5.06 15.18c2.79 8.38 11.85 12.91 20.23 10.12l13.18-4.39c10.87-3.62 23-3.57 33.16 1.73 10.29 5.37 17.57 14.56 20.37 25.82l38.46 153.82c-22.19-6.81-49.79-12.46-81.2-12.46-34.77 0-73.98 7.02-114.85 26.74h-73.18c-40.87-19.74-80.08-26.75-114.86-26.75-31.42 0-59.02 5.65-81.21 12.46l38.46-153.83c2.79-11.25 10.09-20.45 20.38-25.81 10.16-5.3 22.28-5.35 33.15-1.73l13.17 4.39c8.38 2.79 17.44-1.74 20.23-10.12l5.06-15.18c2.8-8.38-1.73-17.45-10.12-20.24l-15.25-5.08c-23.22-7.78-48.75-5.41-70.19 6.33-21.41 11.77-37.09 32.11-43 55.8L1.9 280.37A64.218 64.218 0 0 0 0 295.86v70.25C0 429.01 51.58 480 115.2 480h37.12c60.28 0 110.37-45.94 114.88-105.37l2.93-38.63h35.75l2.93 38.63C313.31 434.06 363.4 480 423.68 480h37.12c63.62 0 115.2-50.99 115.2-113.88v-70.25c0-5.23-.64-10.43-1.9-15.5zm-370.72 89.42c-1.97 25.91-24.4 46.21-51.06 46.21H115.2C86.97 416 64 393.62 64 366.11v-37.54c18.12-6.49 43.42-12.92 72.58-12.92 23.86 0 47.26 4.33 69.93 12.92l-3.13 41.22zM512 366.12c0 27.51-22.97 49.88-51.2 49.88h-37.12c-26.67 0-49.1-20.3-51.06-46.21l-3.13-41.22c22.67-8.59 46.08-12.92 69.95-12.92 29.12 0 54.43 6.44 72.55 12.93v37.54z"></path></svg></span>
-                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.strftime("%B %d") %>"><%= @editor_reviews_cnt %>/<%= @reviews_requirement %> Reviews</a> completed
+                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %>"><%= @editor_reviews_cnt %>/<%= @reviews_requirement %> Reviews</a> completed
                 </p>
               </div>
               <div class="list-group-item" style="border-top: none !important;">
                 <p class="mb-0 pt-3 pb-3 <% if @editor_pitches_cnt >= @pitches_requirement %>strikethrough<% end %>">
                   <span class="rounded-circle mr-4 grey pt-4 pb-4 pl-3 pr-3"><svg width="30px" height="30px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lightbulb" class="white-text svg-inline--fa fa-lightbulb fa-w-11" role="img" viewBox="0 0 352 512"><path fill="currentColor" d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"></path></svg></span>
-                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.strftime("%B %d") %>"><%= @editor_pitches_cnt %>/<%= @pitches_requirement %> Pitches</a> completed</p>
+                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %>"><%= @editor_pitches_cnt %>/<%= @pitches_requirement %> Pitches</a> completed</p>
               </div>
             </div>
           </div>
