--- a/app/views/users/partials/_dashboard_articles.html.erb
+++ b/app/views/users/partials/_dashboard_articles.html.erb
@@ -17,7 +17,7 @@
           </p>
         <% end %>
         <% if (post.reviews.last.try(:status).eql? "Approved for Publishing") %>
-          <p><%= "Great job! This article will be published on " + post.publish_at.localtime.strftime("%D at %I:%M %p") + "." %></p>
+          <p><%= "Great job! This article will be published on " + post.publish_at.localtime.in_time_zone.strftime("%D at %I:%M %p") + "." %></p>
         <% end %>
       </div>
     </div>
