--- a/app/views/welcome/partials/_recents.html.erb
+++ b/app/views/welcome/partials/_recents.html.erb
@@ -4,7 +4,7 @@
       <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title, class: "image_recent_articles"), post )%>
       <h1><%= link_to post.title, post %></h1>
       <p class="category"><%= link_to(post.category.name, post.category) %></p>
-      <p><%= post.publish_at.strftime("%A, %b %d")%></p>
+      <p><%= post.publish_at.in_time_zone.strftime("%A, %b %d")%></p>
       <p class="meta"><%= post.meta_description.truncate_words(20) %></p>
     </div>
   <% end %>
