--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag "subscribe_background.jpg", id: "banner_writing" %>
 <div class="apply_wrapper">
-  <h2>The Teen Magazine · January Issue</h2>
+  <h2>The Teen Magazine · March Issue</h2>
     <br>
   <h4><i>A special thanks to this month's magazine issue writers and designers:</i></h4>
   <span>
@@ -14,13 +14,13 @@
   </span>
   <br>
   <br>
-  <%= image_tag("january_2021_issue_ttm_cover.png", :class => "image_fit_scrn") %>
+  <%= image_tag("march_2021_issue_cover.png", :class => "image_fit_scrn") %>
   <br>
   <br>
   <h4><i>Enter your email to receive this month's magazine issue:</i></h4>
 
 <!--End mc_embed_signup-->
-  <%= form_for(:pages, url:"/january_2021_773ae935-d06c-4ed2-b939-4aaee072bfd4") do |f| %>
+  <%= form_for(:pages, url:"/march_2021_hBc1jS0OHV-4xIiXi-4ed2-b939-VT5aBZqVKs") do |f| %>
     <br>
     <%= f.check_box :sub, :checked => true %>
     <span>Subscribe to The Teen Magazine newsletter and receive all future monthly issues.</span>
@@ -28,7 +28,7 @@
     <br>
     <%= f.text_field :email, placeholder: "Email Address", :style => "margin-bottom: 25px;", required: true %>
     <br>
-    <%= f.submit "Get January Issue", class: "submit_btn" %>
+    <%= f.submit "Get March Issue", class: "submit_btn" %>
   <% end %>
 
   <i style="opacity: 50%;" class="d-block">
