--- a/app/views/applies/confirmations/_editor_app_submitted.html.erb
+++ b/app/views/applies/confirmations/_editor_app_submitted.html.erb
@@ -1,5 +1,5 @@
 <div class="submitted" style="max-width: 800px; margin: auto;">
-  <div style="padding: 0px 30px;">
+  <div style="padding: 30px;">
     <h1>We're so excited you want to join The Teen Magazine editor team!</h1>
     <img style="display: block; width: 600px; max-width: 100%; margin: 0 auto;" src="https://media.giphy.com/media/cqw80XStn460U/giphy.gif" />
     <br>
