--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -114,7 +114,7 @@
         <% end %>
         <%= render "/users/partials/featured_writers", users: @featured_writers, cached: true %>
         <div>
-          <div class="card whats-new-wrapper mt-4" style="border-radius: 10px; overflow: hidden;"
+          <div class="card whats-new-wrapper" style="border-radius: 10px; overflow: hidden;"
             <% if @show_onboarding_full %>
               data-step data-index="4" data-onboarding-content="See what other writers are pitching here."
             <% end %>
