--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -53,6 +53,7 @@
   font-style: italic;
   font-size: 18px !important;
   margin: 0;
+  font-weight: 400;
 }
 
 .box:hover {
@@ -242,6 +243,7 @@
   }
   .info {
     margin: 0 !important;
+    height: 140px;
   }
   .editor_label {
     right: 0;
