--- a/app/views/badges/_new_badge_modal.html.erb
+++ b/app/views/badges/_new_badge_modal.html.erb
@@ -1,25 +1,23 @@
 <div class="modal fade" id="newBadgeModal" tabindex="-1" role="dialog" aria-labelledby="newBadgeModal"
   aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document" style="width: 800px; max-width: 95%;">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">You've earned a new badge!</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <div class="modal-body p-0">
+        <button type="button" class="close p-3 position-absolute" style="right: 0px;" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-        <h2 style="margin-bottom: 5px;">
-          <%= link_to(@user.full_name, @user) %>
-          <% if @badge.present? %>
-            <svg widht="22px" height="22px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="badge-check" class="svg-inline--fa fa-badge-check fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="#00A9FF" d="M512 256a88 88 0 0 0-57.1-82.4A88 88 0 0 0 338.4 57.1a88 88 0 0 0-164.8 0A88 88 0 0 0 57.1 173.6a88 88 0 0 0 0 164.8 88 88 0 0 0 116.5 116.5 88 88 0 0 0 164.8 0 88 88 0 0 0 116.5-116.5A88 88 0 0 0 512 256zm-144.8-44.25l-131 130a11 11 0 0 1-15.55-.06l-75.72-76.33a11 11 0 0 1 .06-15.56L171 224a11 11 0 0 1 15.56.06l42.15 42.49 97.2-96.42a11 11 0 0 1 15.55.06l25.82 26a11 11 0 0 1-.08 15.56z" opacity="0.4"></path><path class="fa-primary" fill="#00A9FF" d="M367.2 211.75l-131 130a11 11 0 0 1-15.55-.06l-75.72-76.33a11 11 0 0 1 .06-15.56L171 224a11 11 0 0 1 15.56.06l42.15 42.49 97.2-96.42a11 11 0 0 1 15.55.06l25.82 26a11 11 0 0 1-.06 15.56z"></path></g></svg>
-            <span class="editor_status"><%= @badge.level %> pageviews</span>
-          <% end %>
-        </h2>
+        <% if @badge.present? %>
+          <%= render '/badges/congrats', background: "linear-gradient( #{@badge.color}, white)" %>
+          <div id="modal-body-badges">
+            <h2>Congratulations!</h2>
+            <p>You've reached a new milestone of <b><%= @badge.level %> <%= @badge.kind %></b>! That means that you are in the top <b><%= @percentile %>%</b> of all writers at The Teen Magazine.
+              Your new badge is visible on your writer profile so you can brag to your friends and family. ;) Amazing job!</p>
+          </div>
+        <% end %>
       </div>
       <div class="comment_form_wrapper mt-0 pl-4 pr-4">
         <div class="btn_cntnr mb-4 mt-4 pb-0">
-          <a href="#" class="newpost--new--profile mr-2 pl-5 pr-5" aria-hidden="true" data-dismiss="modal" aria-label="Close">Accept</a>
+          <a href="#" class="newpost--new--profile mr-2 pl-5 pr-5" aria-hidden="true" data-dismiss="modal" aria-label="Close">Close</a>
         </div>
       </div>
     </div>
