bug fixes writer badges

--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -148,7 +148,7 @@
               <% end %>
             </div>
             <h5>Welcome<% if !@show_editor_dashboard_onboarding %> back<% end %>,</h5>
-            <div class="info">
+            <div>
               <h2 style="max-width: 80%; margin: 0 auto; font-weight: bold;">
                 <%= link_to(@user.try(:full_name), @user, class: "link_grn") %>
               </h2>
