--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -243,7 +243,7 @@
   }
   .info {
     margin: 0 !important;
-    height: 140px;
+    height: 130px;
   }
   .editor_label {
     right: 0;
@@ -595,6 +595,11 @@
   }
 }
 
+@media(min-width: 480px) {
+  .badge_wrapper {
+    display: inline;
+  }
+}
 
 @media (max-width: 600px) {
   .flex--profile {
