--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -34,28 +34,11 @@
                <%== pagy_nav(@pagy).html_safe %>
               <% elsif @users.present? %>
                 <% @users.each do | user | %>
-                    <div class="flex--profile" style="padding-left: 0; padding-right: 0;">
-                      <% if user.profile.exists? %>
-                        <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
-                      <% else %>
-                        <%= image_tag("profile_image.jpg", :class => "profile_img") %>
-                      <% end %>
-                      <div class="info">
-                      <h2 style="margin-bottom: 5px;">
-                        <%= link_to(user.full_name, user) %>
-                      </h2>
-                      <% if user.editor? %>
-                        <span class="editor_status">
-                          Editor
-                        </span>
-                      <% end %>
-                        <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
-                      </div>
-                    </div>
-                  <% end %>
+                  <%= render :partial => 'users/profile', locals: {user: user}, cached: true %>
+                <% end %>
                 <%== pagy_nav(@pagy).html_safe %>
-                <% else %>
-                  <p style="margin-top: -10px;">Your search did not have any results.</p>
+              <% else %>
+                <p style="margin-top: -10px;">Your search did not have any results.</p>
               <% end %>
            </div>
          </div>
