--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -37,36 +37,7 @@
     <h2>Searching for writer... <span style="background-color: #FCD04D"><%= @query %></span></h2>
   <% end %>
   <% @users.each do | user | %>
-      <% if user != nil %>
-        <div class="flex--profile">
-          <% if user.profile.exists? %>
-            <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
-          <% else %>
-            <%= image_tag("profile_image.jpg", :class => "profile_img") %>
-          <% end %>
-          <div class="info">
-          <h2 style="margin-bottom: 5px;">
-            <%= link_to(user.full_name, user) %>
-          </h2>
-          <% if user.editor? %>
-            <span class="editor_status">
-              Editor
-            </span>
-          <% end %>
-            <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
-            <% if current_user.admin? %>
-              <h6 style="margin: 0;"><%= user.email %></h6>
-              <h6 class="mt-2" style="margin: 0; opacity: 50%;">
-                <% if user.last_sign_in_at.nil? %>
-                  Never signed in
-                <% else %>
-                  Last active <%= time_ago_in_words(user.last_sign_in_at) %> ago
-                <% end %>
-              </h6>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
+    <%= render :partial => 'profile', locals: {user: user}, cached: true %>
   <% end %>
   <%== pagy_nav(@pagy).html_safe %>
 </div>
