--- a/app/views/users/editors.html.erb
+++ b/app/views/users/editors.html.erb
@@ -33,14 +33,15 @@
           <% end %>
             <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
             <% if current_user.admin? %>
-              <h6 style="margin: 0;"><%= user.email %></h6>
-              <h6 class="mt-2" style="margin: 0; opacity: 50%;">
-                <% if user.last_sign_in_at.nil? %>
-                  Never signed in
-                <% else %>
-                  Last active <%= time_ago_in_words(user.last_sign_in_at) %> ago
-                <% end %>
-              </h6>
+              <div>
+                <h6 class="mt-2" style="margin: 0; opacity: 50%;">
+                  <% if user.last_sign_in_at.nil? %>
+                    Never signed in
+                  <% else %>
+                    Last active <%= time_ago_in_words(user.last_sign_in_at) %> ago (admin only)
+                  <% end %>
+                </h6>
+              </div>
             <% end %>
           </div>
         </div>
