send email for new badge initial commit

--- a/app/views/pages/reset.html.erb
+++ b/app/views/pages/reset.html.erb
@@ -1,4 +1,4 @@
-<div class="skinny_wrapper">
+<div class="skinny_wrapper" style="padding-top: 30px;">
   <h1>Oh no, we heard you forgot your password</h1>
   <h4>No worries, we are here to help!</h4>
   <p>Enter your email below, and we'll send you the link to reset your password.</p>
