editor reviews count bug fix

--- a/app/assets/stylesheets/writer.css.scss
+++ b/app/assets/stylesheets/writer.css.scss
@@ -648,6 +648,8 @@ a {
 
 .stair_step {
   text-align: center;
+  margin-left: -5%;
+  margin-right: -5%;
   .progress_step, .progress_step p {
     color: #4ABEB6 !important;
     border-top-color: #4ABEB6 !important;
