--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -35,6 +35,7 @@
             <% if @editors_reviews.count.eql? 0 %>
               <i>You don't have any articles that you're editing right now.</i>
             <% end %>
+          </div>
           <div data-step data-index="2" data-onboarding-content= "Articles waiting to be reviewed by an editor will show up here. You can start claiming and reviewing articles once you've finished reading &ldquo;Reviewing Articles.&rdquo;">
             <h5 class="pitch_ttl">Articles Ready for Review</h5>
             <div class="flex-wrapper">
@@ -101,7 +102,6 @@
               <% end %>
             </div>
           </div>
-        </div>
         <div class="tab-pane fade" id="follow-classic" role="tabpanel" aria-labelledby="activity-tab-classic">
           <h5 class="pitch_ttl">All Editor Activity</h5>
           <%= render_async_cache get_editor_activity_path, toggle: { selector: '#activity-tab-classic', event: :click } do %>
@@ -126,7 +126,7 @@
               <div class="alert alert-danger" role="alert">
                 <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-triangle" class="mb-1 svg-inline--fa fa-exclamation-triangle fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg> You did not meet last month's editor deadline. Missing this month will result in your removal from the editor team.
               </div>
-            <% elsif Date.today.end_of_month.day - Date.today.day < 16 && (@editor_pitches_cnt + @editor_reviews_cnt < (@reviews_requirement + @pitches_requirement) / 2) && (@user.created_at < (Time.now - 30.days)) %>
+            <% elsif Date.today.end_of_month.day - Date.today.day < 16 && (@editor_pitches_cnt + @editor_reviews_cnt < (@reviews_requirement + @pitches_requirement) / 2) && (@user.became_an_editor < (Time.now - 30.days)) %>
               <div class="alert alert-danger" role="alert">
                 <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-triangle" class="mb-1 svg-inline--fa fa-exclamation-triangle fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg> You are not on track to completing the editor assignments by <b><%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %></b>.
                 Missing a deadline may result in your removal from the editor team.
