--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -225,7 +225,7 @@
   });
 </script>
 
-<% if true %>
+<% if @show_editor_dashboard_onboarding %>
   <%= javascript_include_tag "mdbootstrap/mdb.min" %>
   <%= javascript_include_tag "plugins/onboarding.min" %>
   <script type="text/javascript">
