fix header not showing on mobile

--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -1,4 +1,4 @@
-<header id="main_navigation" class="clearfix header-navigation">
+<header id="main_navigation" class="clearfix header-navigation hide-on-mobile">
   <!-- <div class="banner_stts_relative">
     <p class= "banner_stts" style="background-color: #50C150;">The Teen Magazine's March Issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
   </div> -->
