--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -58,7 +58,7 @@
                     <%= render "layouts/partials/social_media" %>
                   </div>
                 </div>
-                <div class="border">
+                <div class="border hide-on-mobile">
                   <div class="nav_wrapper">
                     <nav class="nav_article">
                       <div class="nav-title-wrapper nav-title">
