--- a/app/views/layouts/partials/_header-writer-mobile.html.erb
+++ b/app/views/layouts/partials/_header-writer-mobile.html.erb
@@ -1,5 +1,5 @@
 <header id="main_navigation" class="clearfix header-mobile">
-  <div class="border">
+  <div class="header-writer-mobile">
     <div class="nav_wrapper">
       <nav class="nav_article">
         <div class="nav-title-wrapper nav-title">
