--- a/app/views/reviews/_post_reviews.html.erb
+++ b/app/views/reviews/_post_reviews.html.erb
@@ -7,7 +7,7 @@
   <% end %>
     <div class="card mb-3 changes_requested">
       <div class="card-header">
-        <% @editor = User.where(id: review.editor_id).first %>
+        <% @editor = User.find_by(id: review.editor_id) %>
         Review #<%= @reviews.count - (index) %> given by <%= link_to(@editor.try(:full_name), @editor, :class => "link_nrml", :target => "_blank") %> on <%= review.updated_at.in_time_zone.strftime("%D") %>
         <% if current_user.editor? && (review.status.eql? "Rejected") %>
           <%= link_to review_path(review), method: :delete, :data => {confirm: "Are you sure you want to delete this review?"} do %>
